--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,24 @@
 [project]
-name = "python-project-template"
+name = "my-project"
 version = "0.1.0"
-description = ""
+description = "Add your description here"
 readme = "README.md"
-requires-python = ">=3.11"
-dependencies = []
+authors = [
+  { name = "Yuki Oshima", email = "39944763+os1ma@users.noreply.github.com" },
+]
+requires-python = ">=3.12"
+dependencies = [
+    "click>=8.1.8",
+    "google-a2a",
+    "python-dotenv>=1.1.0",
+]
+
+[project.scripts]
+my-project = "my_project:main"
+
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
 
 [tool.mypy]
 strict = true
@@ -12,3 +26,9 @@ strict = true
 [tool.ruff.lint]
 select = ["ALL"]
 ignore = ["D", "ANN", "TRY", "EM", "FA", "SIM108", "S101", "RET505", "TCH002"]
+
+[tool.uv.sources]
+google-a2a = { git = "https://github.com/djsamseng/A2A", subdirectory = "samples/python", branch = "prefixPythonPackage" }
+
+[tool.uv.workspace]
+members = ["my-project"]
